// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Runtime component render correctly 1`] = `
<span
  className="runtime"
>
  1h 40m
</span>
`;

exports[`render Runtime component render zero hours and minutes 1`] = `
<span
  className="runtime"
>
  
</span>
`;
